fix spacing between ellipsis and icons

--- a/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/fields/content-type-field-dragabble-item/content-type-field-dragabble-item.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/fields/content-type-field-dragabble-item/content-type-field-dragabble-item.component.scss
@@ -45,7 +45,6 @@ dot-icon {
 }
 
 .field__name {
-    margin-right: $spacing-1;
     @include truncate-text;
 }
 
@@ -75,7 +74,7 @@ dot-icon {
 
 .field__actions {
     flex-shrink: 0;
-    margin-left: $spacing-1;
+    margin-left: 0.25rem;
 
     & > * {
         margin: 0 0.25rem;
